<resources>
    <string name="app_name">Dar24</string>
    <string name="settings">Mipangilio</string>
    <string name="about_dar24">Kuhusu Dar24</string>
    <string name="term_policy">Sera na Sheria</string>
    <string name="feedback">Maoni</string>
    <string name="c_2018">\u00A9 2018</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="subscribe_to_dar24">Jiunge na Dar24</string>
    <string name="language">Lugha</string>
    <string name="english_international">English (international)</string>
    <string name="font_size">Kipimo cha herufi</string>
    <string name="medium">Kawaida</string>
    <string name="notification">Taarifa</string>
    <string name="video_autoplay">Anza cheza video</string>
    <string name="never">Usianze</string>
    <string name="clear_cache">Futa cache</string>
    <string name="user_agreement">Makubaliano ya mtumiaji</string>
    <string name="version">Toleo</string>
    <string name="video">Video</string>
    <string name="version_name">1.0.1</string>
    <string name="only_on_wifi">Kwenye WIFI pekee</string>
    <string name="always">Muda wote</string>
    <string name="change">Badili</string>
    <string name="cancel">Sitisha</string>
    <string name="small">Ndogo</string>
    <string name="large">Kubwa</string>
    <string name="kiswahili">Kiswahili</string>
    <string name="latest">Latest</string>
    <string name="habari">Habari</string>
    <string name="dar24_tv">Dar24 tv</string>
    <string name="magazeti">Magazeti</string>
    <string name="michezo">Michezo</string>
    <string name="bungeni">Bungeni</string>
    <string name="burudani">Burudani</string>
    <string name="siasa_zetu">Siasa zetu</string>
    <string name="sauti_zetu">Sauti zetu</string>
    <string name="biashara">Biashara</string>
    <string name="teknolojia">Teknolojia</string>
    <string name="maisha">Maisha</string>
    <string name="afya">Afya</string>
    <string name="hapo_kale">Hapo kale</string>
    <string name="test_trending"></string>
    <string name="test_lorem_ipsum"></string>
    <string name="test_published_author"></string>
    <string name="test_lorem_ipsum_sentence"></string>
    <string name="firstname">Jina la kwanza</string>
    <string name="lastname">Jina la mwisho</string>
    <string name="email">Barua pepe</string>
    <string name="phone_number">Namba ya sumu</string>
    <string name="subscribe">Jiunge</string>
    <string name="menu">Menu</string>
    <string name="no_news">Hamna habari</string>
    <string name="test_settings">Mipangilio</string>
    <string name="test_language">Lugha</string>
    <string name="test_english_international">English (international)</string>
    <string name="test_200_views">200 tazamwa</string>
    <string name="search">Tafuta</string>
    <string name="refresh">Refresh</string>
    <string name="comment">Ujumbe</string>
    <string name="share">Sambaza</string>
    <string name="just_now"> sekunde</string>
    <string name="a_minute_ago">dakika</string>
    <string name="minutes_ago">dakika</string>
    <string name="an_hour_ago">saa</string>
    <string name="hours_ago">masaa</string>
    <string name="yesterday">jana</string>
    <string name="days_ago">siku</string>
    <string name="something_went_wrong">Tatizo limetokea</string>
    <string name="no_internet_connection">Hakuna mtandao</string>
    <string name="new_video">Mpya</string>
    <string name="playlist">Vipindi</string>
    <string name="empty_url">The web url shouldn\'t be empty</string>
    <string name="detail">Dar24</string>
    <string name="by">Na</string>
    <string name="share_with">Sambaza kwa</string>
    <string name="email_required">Barua pepe inahitajika</string>
    <string name="subscribing">Kujiunga</string>
    <string name="subscribe_success_message">Umejiunga na dar24</string>
    <string name="dar24">Dar24</string>
    <string name="thank_you">Asante</string>
    <string name="ok">Sawa</string>
    <string name="unknown_playlist">Kipindi hakijulikani</string>
    <string name="unknown_news">Habari haijulikani</string>
    <string name="videos">video</string>
    <string name="views">imeangaliwa</string>
    <string name="about">Kuhusu</string>
    <string name="ajira">Ajira</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="new_version_available">Toleo jipya linapatikana</string>
    <string name="please_update_app">Tafadhali, sasisha na pakua toleo jipya ili kuendelea.</string>
    <string name="Sasisha">Sasisha</string>
    <string name="hapana_ahsante">Hapana</string>

</resources>
