<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="horizontal"
    tools:ignore="MissingPrefix">

    <ImageView
        android:id="@+id/ivThumbnail"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@color/grey_200"
        android:layout_gravity="top"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/test_lorem_ipsum"
            android:textSize="15sp"
            android:textColor="@color/grey_900"
            fontPath="fonts/Ubuntu-Medium.ttf"
             />

        <TextView
            android:id="@+id/tvSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/test_lorem_ipsum"
            android:textSize="12sp"
            android:textColor="@color/grey_800"
            fontPath="fonts/Ubuntu-Regular.ttf"/>


        <TextView
            android:id="@+id/tvPublishedAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@string/test_published_author"
            android:textSize="12sp"
            android:textColor="@color/grey_900"
            fontPath="fonts/Ubuntu-Light.ttf"/>

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/brand_red"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/test_trending"
            android:textColor="@color/white"
            android:textSize="12sp"
            fontPath="fonts/Ubuntu-Light.ttf"/>

    </LinearLayout>

</LinearLayout>